# niscope-mcp

./: .gitignore  MCP_OUTPUT_SPEC.md  README.md  install.bat  pyproject.toml  requirements.txt
niscope-mcp/: server.py
niscope_mcp/: __init__.py  __main__.py
niscope_mcp/backends/: __init__.py  _worker.py  base.py  direct.py  mock.py
