[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "niscope-mcp"
version = "1.1.0"
description = "AI-controlled NI oscilloscope via MCP — PXIe-5160/5164 with text-waveform rendering"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Reasonix"}]
keywords = ["oscilloscope", "ni-scope", "mcp", "pxie", "ai", "instrumentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: System :: Hardware",
]
dependencies = [
    "mcp>=1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
hardware = ["niscope>=1.4"]

[project.urls]
Homepage = "https://github.com/user/niscope-mcp"
Repository = "https://github.com/user/niscope-mcp"

[project.scripts]
niscope-mcp = "niscope_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["niscope_mcp", "niscope_mcp.*"]
