[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "niscope-mcp"
version = "2.1.2"
description = "AI-controlled PXIe oscilloscope via MCP — advanced measurements + smart signal ID + strict process isolation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Reasonix"}]
keywords = ["oscilloscope", "ni-scope", "mcp", "pxie", "ai", "instrumentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: System :: Hardware",
]
dependencies = [
    "mcp>=1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
hardware = ["niscope>=1.4"]

[project.urls]
Homepage = "https://github.com/YMZDS/niscope-mcp"
Repository = "https://github.com/YMZDS/niscope-mcp"

[project.scripts]
niscope-mcp = "niscope_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["niscope_mcp", "niscope_mcp.*"]